# livraria

./: .env-exemplo  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_autor_livro.py  0003_carro_dono_delete_categoria_delete_editora.py  0004_autor_categoria_editora_livro_delete_carro_and_more.py  0004_compra.py
livraria/models/: __init__.py  livro.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: __init__.py  autor.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py  serializers.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py
